# PDPBioGen

./: .env.example:.sh  .gitignore  .gitignore.sh  .neuro.run_symmetry_mapper  .txt  1. Add Real Data Integration.py  1. Advanced Styling.py  1. CLI Complexity.py  1. Contributor Agreement  CONTRIBUTING.md  1. Core Architecture.py  1. Integration Gaps  Missing BAIS Compliance:.py  1. Local BLAST Support 🔥.py  1. Real Biological Data Integration.py  1. Release Management.py  1. Runtime License Validation.py  1. Unit Test Enhancement  1. 📁 Directory Structure.sh  1.2 Enhanced Project Structure.txt  1: BAIS Integration.py  2. Code-Level License Management.py  2. Comprehensive Getting Started Guide.md  2. Configuration Should Be Explicit.py  2. Create Your Biocorp-Specific CLA.txt  2. Detailed Lab Test Setup & Protocol.txt  2. Docker ImagesDockerfile.opensource  2. Error Handling Over-Engineering.py  2. Feature Gating.py  2. Implement Validation Framework.py  2. License Compliance Monitoring.py  2. Missing Progress Feedback.py  2. Multiple Alignment Methods 🧬.py  2. Results Quality Metrics.py  2. Support Structure.py  2. Technical Infrastructure.txt  2. Template System.py  2. Unified Main Integrator.py  2. Validation Against Established Benchmarks.py  2. Validation Enhancement  The repository would benefit from more comprehensive biological validation:.py  2: Enhanced Validation Suite.py  3. Community Building 👥.md  (+314 more)
# Debian/: requirements.txt
Benchmarks/: download_samples.sh
QuantumDarkNet/: Primordial-Photon-Dark-Photon-Entanglement.html  Quantum_Secure_Dark_Net_Advanced_Decoherence.ipynb  Quantum_Secure_Dark_Net_Decoherence.ipynb  quantum_secure_dark_net_repo_deliverables_simulations_literature_milestone_a.py
benchmark_results/: summary.json
benchmarks/: README.md  download_samples.sh  requirements.txt
core/: hepatic_healing.py  multi_scale.py
datasets/: gepliver.py
docs/: LICENSING.md  architecture.yaml  conf.py  datasets.md  index.md  pipeline.md  quickstart.md
examples/: Fullquick_start.py  cross_domain_run.py  grok_41_council_demo.py  grok_council_demo.py  ibd_gwas.tsv  ibd_minimal_gwas.tsv  input_academic.json  input_corporate.json  t2d_minimal_gwas.tsv
pdp_biogen/: cli.py  (+3 more)
(+184 files in other folders)
