[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdp-biogen"
version = "0.1.1"
description = "PDP BioGen — Next Generation Health Care with Real-time BCI healing 50ms latency — First of its kind"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "tlcagford"}]
keywords = ["bci", "bioinformatics", "multi-agent", "parallel-distributed-processing", "real-time-healing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  # or your actual license
    "Operating System :: OS Independent",
]

dependencies = [
    "openai>=1.0",
    "torch",
    "numpy",
    "scipy",
    # add the rest from your requirements.txt
]

[project.scripts]
pdp-biogen = "pdp_biogen:main"   # change to run via `pdp-biogen` after install
