[project]
name = "pdpbiogen"
version = "0.0.1"
description = "Parallel Distributed Processing for Bio-Genomic Signal Integration"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name="T. Ford", email="tony.e.ford@protonmail.com" }
]

keywords = ["PDP", "bio", "neuro", "healing", "signal-processing"]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "torch",
    "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
